// Copyright 2020 CYBERCRYPT
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package app;
option go_package = ".;app";


service Encryptonize{
  // Stores an object
  rpc Store (StoreRequest) returns (StoreResponse){}

  // Retrieves an object
  rpc Retrieve (RetrieveRequest) returns (RetrieveResponse){}

  // Creates a new user on the service
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}

  // Returns list of users with permission to decrypt the Package
  rpc GetPermissions (GetPermissionsRequest) returns (GetPermissionsResponse){}

  // Adds permission to an object
  rpc AddPermission (AddPermissionRequest) returns (AddPermissionResponse){}

  // Removes permission from an object
  rpc RemovePermission (RemovePermissionRequest) returns (RemovePermissionResponse){}

  // Returns the versions of the currently running services
  rpc Version (VersionRequest) returns (VersionResponse){}
}


message VersionRequest{
}

message VersionResponse{
  string commit = 1;
  string tag = 2;
}

message StoreRequest{
  Object object = 1;
}

message StoreResponse{
  string object_id = 1;
}

message RetrieveRequest{
  string object_id = 1;
}

message RetrieveResponse{
  Object object = 1;
}

message CreateUserRequest{
  enum UserScope{
    READ = 0;
    CREATE = 1;
    INDEX = 2;
    OBJECTPERMISSIONS = 3;
    USERMANAGEMENT = 4;
  }
  repeated UserScope user_scopes = 1;
}

message CreateUserResponse{
  string userID = 1;
  string accessToken = 2;
  string userScopes = 3;
}

message GetPermissionsRequest{
  string object_id = 1;
}

message GetPermissionsResponse{
  repeated string user_ids = 1;
}

message AddPermissionRequest{
  string object_id = 1;
  string target = 2;
}

message AddPermissionResponse{
}

message RemovePermissionRequest{
  string object_id = 1;
  string target = 2;
}
message RemovePermissionResponse{
}

message Object{
  bytes plaintext = 1;
  bytes associated_data = 2;
}
